试剂名录、消耗管理、数据统计--加上机构部门、修改部门联动修改筛查点。